--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -55,4 +56,41 @@ table {
 /* FORM
 
 */
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 50px;
+  padding-bottom: 80px;
+}
+
+header h1 {
+  font-size: 28px;
+  font-weight: bold;
+  color: #40531B;
+  padding-bottom: 10px;
+}
+
+header p {
+  font-weight: 300;
+}
+
+#survey-form {
+  content: '';
+  background-color: #7AA095;
+  width: 600px;
+  padding: 20px 50px;
+  border-radius: 20px;
+}
 /*# sourceMappingURL=styles.css.map */
