--- a/styles.scss
+++ b/styles.scss
@@ -51,3 +51,42 @@ table {
 
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+$light-cyan: #D7F9F1;
+$morning-blue: #7AA095;
+$dark-moss-green: #40531B;
+$may-green: #618B4A;
+$sage: #AFBC88;
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 80px;
+
+    h1 {
+        font-size: 28px;
+        font-weight: bold;
+        color: $dark-moss-green;
+        padding-bottom: 10px;
+    }
+
+    p {
+        font-weight: 300;
+    }
+}
+
+#survey-form {
+    content: '';
+    background-color: $morning-blue;
+    width: 600px;
+    padding: 20px 50px ;
+    border-radius: 20px;
+  }
