--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,17 @@ table {
 */
 body {
   font-family: 'Poppins', sans-serif;
+  background: #D7F9F1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 header {
@@ -72,25 +83,87 @@ header {
       -ms-flex-align: center;
           align-items: center;
   padding-top: 50px;
-  padding-bottom: 80px;
+  padding-bottom: 30px;
 }
 
 header h1 {
   font-size: 28px;
   font-weight: bold;
   color: #40531B;
-  padding-bottom: 10px;
 }
 
 header p {
   font-weight: 300;
+  margin-top: 20px;
+}
+
+.container {
+  padding-bottom: 60px;
+}
+
+input,
+button,
+select,
+textarea {
+  margin: 10px 0px;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
 #survey-form {
+  display: block;
   content: '';
   background-color: #7AA095;
   width: 600px;
-  padding: 20px 50px;
+  padding: 50px 50px 20px 50px;
   border-radius: 20px;
+}
+
+#survey-form .form-group {
+  margin: 0 auto 1.25rem auto;
+  padding: 0.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.input-radio,
+.input-checkbox {
+  display: inline-block;
+  margin-right: 0.625rem;
+  min-height: 1.50rem;
+  min-width: 1.25rem;
+}
+
+.input-textarea {
+  min-height: 120px;
+  padding: 0.625rem;
+  resize: vertical;
+}
+
+.option {
+  margin-left: 5px;
+  font-size: 0.7rem;
+  color: #40531B;
+}
+
+button {
+  border: none;
+  padding: 10px 30px;
+  border-radius: 10px;
+  background-color: #40531B;
+  color: #D7F9F1;
+}
+
+button:hover {
+  opacity: 0.8;
+  -webkit-transition: 200ms;
+  transition: 200ms;
+  cursor: pointer;
 }
 /*# sourceMappingURL=styles.css.map */
