--- a/styles.scss
+++ b/styles.scss
@@ -61,6 +61,10 @@ $sage: #AFBC88;
 
 body {
     font-family: 'Poppins', sans-serif;
+    background: $light-cyan;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -69,24 +73,80 @@ header {
     flex-direction: column;
     align-items: center;
     padding-top: 50px;
-    padding-bottom: 80px;
+    padding-bottom: 30px;
 
     h1 {
         font-size: 28px;
         font-weight: bold;
         color: $dark-moss-green;
-        padding-bottom: 10px;
     }
 
     p {
         font-weight: 300;
+        margin-top: 20px;
     }
 }
 
+.container {
+    padding-bottom: 60px;
+}
+
+input,
+button,
+select,
+textarea {
+  margin: 10px 0px;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
 #survey-form {
+    display: block;
     content: '';
     background-color: $morning-blue;
     width: 600px;
-    padding: 20px 50px ;
+    padding: 50px 50px 20px 50px;
     border-radius: 20px;
+  
+    .form-group {
+      margin: 0 auto 1.25rem auto;
+      padding: 0.25rem;
+      display: flex;
+      flex-direction: column;
+    }
   }
+
+.input-radio,
+.input-checkbox {
+  display: inline-block;
+  margin-right: 0.625rem;
+  min-height: 1.50rem;
+  min-width: 1.25rem;
+}
+
+.input-textarea {
+  min-height: 120px;
+  padding: 0.625rem;
+  resize: vertical;
+}
+
+.option {
+  margin-left: 5px;
+  font-size: 0.7rem;
+  color: $dark-moss-green;
+}
+
+button {
+  border: none;
+  padding: 10px 30px;
+  border-radius: 10px;
+  background-color: $dark-moss-green;
+  color: $light-cyan;
+  
+  &:hover {
+    opacity: 0.8;
+    transition: 200ms;
+    cursor: pointer;
+  }
+}
